--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^3.3.18
   image_picker: ^0.8.5+3
   fluttertoast: ^8.0.9
+  firebase_storage: ^10.2.17
 
 dev_dependencies:
   flutter_test:
