--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   image_picker: ^0.8.5+3
   fluttertoast: ^8.0.9
   firebase_storage: ^10.2.17
+  csv: ^5.0.1
+  path_provider: ^2.0.10
+  permission_handler: ^9.2.0
+  open_file: ^3.2.1
+  android_external_storage: ^0.1.0
 
 dev_dependencies:
   flutter_test:
